# docvec

./: .gitignore  CHROMADB_VERIFICATION_REPORT.md  CLAUDE.md  FILES_CREATED.md  OPERATION_COMPLETE.md  QUICK_START_REINDEX.md  README.md  REINDEX_OPERATIONS.md  REINDEX_README.md  RE_INDEXING_SUMMARY.md  START_HERE.md  diagnose_and_reindex.py  index_docs.py  pyproject.toml  reindex_docs.py  server.py  update_paths_and_reindex.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md
docs/plans/: mcp-document-indexing.yaml
docs/plans/mcp-document-indexing/: plan-01-foundation.yaml  plan-02-indexing.yaml  plan-03-query.yaml  plan-04-mcp-server.yaml  plan-05-testing-deployment.yaml
src/docvec/: __main__.py  mcp_server.py
src/docvec/chunking/: __init__.py  base.py  code_chunker.py  markdown_chunker.py  pdf_chunker.py  text_chunker.py
src/docvec/deduplication/: __init__.py  hasher.py
src/docvec/embedding/: __init__.py  factory.py  mlx_provider.py  ollama_client.py  provider.py
src/docvec/indexing/: __init__.py  batch_processor.py  indexer.py
src/docvec/mcp_tools/: __init__.py  indexing_tools.py  management_tools.py  query_tools.py
src/docvec/storage/: __init__.py  chroma_store.py
src/vector_mcp/: __init__.py  __main__.py
src/vector_mcp/chunking/: __init__.py  code_chunker.py  markdown_chunker.py  text_chunker.py
src/vector_mcp/deduplication/: __init__.py
src/vector_mcp/embedding/: ollama_client.py
src/vector_mcp/indexing/: indexer.py
src/vector_mcp/mcp_tools/: indexing_tools.py  query_tools.py
tests/: __init__.py  test_batch_processor.py  test_chroma_store.py  test_chunking_base.py  test_code_chunker.py  test_hasher.py  test_indexer.py  test_integration.py  test_main.py  test_markdown_chunker.py  test_mcp_indexing_tools.py  test_mcp_management_tools.py  test_mcp_query_tools.py  test_mcp_server.py  test_ollama_client.py  test_pdf_chunker.py  test_text_chunker.py
tests/fixtures/sample_docs/: README.md  document.txt  script.py
